@@ -19,24 +19,22 @@ Alias /clarin-ellogon-services /opt/WebServices/EllogonAnnotationTool/ellogon-ap
   Require all granted
 </Directory>
 
-<VirtualHost *:80>
-  WSGIScriptAlias / /var/www/clarin-el-annotation-tool/backend-django/DjangoClarin/wsgi.py \
-      process-group=annotation.ellogon.org
+WSGIScriptAlias / /var/www/clarin-el-annotation-tool/backend-django/DjangoClarin/wsgi.py \
+    process-group=annotation.ellogon.org
 
-  Alias /robots.txt  /var/www/clarin-el-annotation-tool/backend-django/static/robots.txt
-  Alias /favicon.ico /var/www/clarin-el-annotation-tool/backend-django/static/favicon.ico
-  Alias /static/     /var/www/clarin-el-annotation-tool/backend-django/static/
-  Alias /assets/     /var/www/clarin-el-annotation-tool/backend-django/static/assets/
+Alias /robots.txt  /var/www/clarin-el-annotation-tool/backend-django/static/robots.txt
+Alias /favicon.ico /var/www/clarin-el-annotation-tool/backend-django/static/favicon.ico
+Alias /static/     /var/www/clarin-el-annotation-tool/backend-django/static/
+Alias /assets/     /var/www/clarin-el-annotation-tool/backend-django/static/assets/
 
-  RewriteEngine On
-  # LogLevel alert rewrite:trace2
-  RewriteCond %{REQUEST_URI} .*\.js
-  RewriteCond %{REQUEST_URI} !^/static/
-  RewriteRule .*  /static$0  [PT,L]
+# RewriteEngine On
+# # LogLevel alert rewrite:trace2
+# RewriteCond %{REQUEST_URI} .*\.js
+# RewriteCond %{REQUEST_URI} !^/static/
+# RewriteRule .*  /static$0  [PT,L]
 
-  WSGIDaemonProcess annotation.ellogon.org processes=2 threads=25 \
-      python-home=/var/www/apache_venv \
-      python-path=/var/www/clarin-el-annotation-tool/backend-django \
-      maximum-requests=10000
-  WSGIProcessGroup  annotation.ellogon.org
-</VirtualHost>
+WSGIDaemonProcess annotation.ellogon.org processes=2 threads=25 \
+    python-home=/var/www/apache_venv \
+    python-path=/var/www/clarin-el-annotation-tool/backend-django \
+    maximum-requests=10000
+WSGIProcessGroup  annotation.ellogon.org
