@@ -1,0 +1,5 @@
+#!/usr/bin/env bash
+SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}" )" &> /dev/null && pwd )
+
+bash $SCRIPT_DIR/stop.sh
+bash $SCRIPT_DIR/start.sh
