@@ -1,3 +1,14 @@
+07 February 2022 Petasis George <petasis@iit.demokritos.gr>:
+ * docker/Dockerfile:
+ * docker/build.sh:
+ * docker/conf/ellogon_annotation_tool.conf:
+ * docker/conf/env:
+ * docker/docker-compose.yml:
+ * docker/env:
+ * docker/start.sh:
+ * docker/restart.sh:
+ * docker/stop.sh: Fixes sto dockerisation.
+
 05 February 2022 Petasis George <petasis@iit.demokritos.gr>:
  * docker/docker-compose.yml: Maria DB & Mongo integration.
 
